--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "dotenv": "8.2.0",
     "next": "9.5.3",
     "next-absolute-url": "1.2.2",
     "next-compose-plugins": "2.2.0",
     "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "dotenv": "8.2.0"
+    "react-cookie": "^4.1.1",
+    "react-dom": "16.13.1"
   },
   "devDependencies": {
     "@svgr/webpack": "5.4.0",
